# memory_map

./: .env.example  .gitignore  .mcp_history.json  .mcp_memory.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  history_hook.py  history_store.py  pyproject.toml  redact.py  requirements.txt  server.py  test_question.py  test_setup.py
.github/workflows/: benchmark.yml  ci.yml  publish.yml
benchmarks/: bench_retrieval.py
benchmarks/results/: 20260512T205751Z_k5.json  20260512T205822Z_k5.json  20260512T211946Z_k5.json  20260512T212251Z_k5.json  20260512T212759Z_k5.json  20260512T213307Z_k5.json  20260512T213736Z_k5.json  20260512T214144Z_k5.json
memory_map_mcp/: history_hook.py  history_store.py  redact.py  server.py
tests/: conftest.py  quick_git_test.py  test_client.py  test_compression.py  test_e2e.py  test_history.py  test_memory_mongo.py  test_mongo_features.py  test_multi_project.py  test_new_features.py  test_redact.py  test_validation.py
