[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-map-mcp"
version = "0.1.0"
description = "MCP server for persistent AI memory — MongoDB-backed with file fallback"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0",
    "httpx",
    "pathspec",
    "portalocker",
    "pymongo[srv]>=4.0",
    "python-dotenv",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
local = ["sentence-transformers"]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
memory-map-mcp = "memory_map_mcp.server:main"
memory-map-hook = "memory_map_mcp.history_hook:main"

[tool.hatch.build.targets.wheel]
packages = ["memory_map_mcp"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
