[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-map-mcp"
version = "1.1.0"
description = "MCP server for persistent AI memory — MongoDB-backed with file fallback"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Sidhartha Mohanty", email = "sidhartha.mohanty93@gmail.com" }]
keywords = ["mcp", "claude", "ai", "memory", "mongodb", "conversation-history"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastmcp>=3.0",
    "httpx",
    "pathspec",
    "portalocker",
    "pymongo[srv]>=4.0",
    "python-dotenv",
]

[project.optional-dependencies]
embed-openai = ["openai>=1.0"]
embed-local = ["sentence-transformers"]
dev = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/kid-sid/memory_map"
Repository = "https://github.com/kid-sid/memory_map"

[project.scripts]
memory-map-mcp = "memory_map_mcp.server:main"
memory-map-hook = "memory_map_mcp.history_hook:main"

[tool.hatch.build.targets.wheel]
packages = ["memory_map_mcp"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
